Manage @lit/reactive-element version, not just as transitive dependency of lit

--- a/packages/reflect/lit/package.json
+++ b/packages/reflect/lit/package.json
@@ -23,6 +23,7 @@
     "@webfeet/reflect": "^0.1.0"
   },
   "devDependencies": {
+    "@lit/reactive-element": "^2.1.1",
     "chai": "^6.2.1",
     "lit": "^3.3.1"
   },
