--- a/packages/event-handler/lit/package.json
+++ b/packages/event-handler/lit/package.json
@@ -23,6 +23,7 @@
     "@webfeet/event-handler": "^0.1.0"
   },
   "devDependencies": {
+    "@lit/reactive-element": "^2.1.1",
     "lit": "^3.3.1"
   },
   "peerDependencies": {
