Group eslint dependabot updates
with lower priority as minor/patch updates so this should still
update eslint minors in the same PR as other minor updates.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,10 @@ updates:
         update-types:
           - "minor"
           - "patch"
+      eslint:
+        patterns:
+          - "eslint"
+          - "@eslint/*"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
